--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,8 @@
 	Thx - Hardy
 -->
 
+    <string name="search_street">Search street</string>
+    <string name="start_search_from_city">Start search from city</string>
     <string name="more_transport_on_stop_hint">There is more transport on this stop.</string>
     <string name="ask_for_location_permission">Please give OsmAnd permission for location to continue.</string>
     <string name="thank_you_for_feedback">Thank you for feedback</string>
