--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
+	<string name="re_send_location">Re-send location</string>
+	<string name="last_sent_location">Last sent location</string>
+	<string name="last_available_location">Last available location</string>
+	<string name="sharing_status">Sharing status</string>
+	<string name="sharing_enabled">Sharing: Enabled</string>
+	<string name="shared_string_status">Status</string>
+	<string name="no_gps_connection">No GPS connection</string>
+	<string name="sharing_success">Successfully sent and updated</string>
+	<string name="not_possible_to_send_to_chats">Not possible to send to chats:</string>
+	<string name="no_internet_connection">No internet connection</string>
+	<string name="shared_string_disable">Disable</string>
 	<string name="shared_string_save">Save</string>
 	<string name="add_device_descr">Enter your device id that you can find at https://live.osmand.net/device/ID</string>
 	<string name="device_id">Device id</string>
