--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,25 +1,25 @@
 <resources>
-	<string name="enter_another_device_name">Enter another name, you already have the device with the same name</string>
-	<string name="device_added_successfully">%1$s added successfully.</string>
+	<string name="enter_another_device_name">Pick a name you haven\'t already used</string>
+	<string name="device_added_successfully">%1$s added.</string>
 	<string name="shared_string_add">Add</string>
-	<string name="error_adding_new_device">Error adding new device</string>
-	<string name="enter_device_name_description">Enter a name for your new device. Max length 200 symbols.</string>
-	<string name="device_name_is_too_long">Device name is too long</string>
+	<string name="error_adding_new_device">Could not add new device</string>
+	<string name="enter_device_name_description">Name your new device in max. 200 symbols.</string>
+	<string name="device_name_is_too_long">Device name too long</string>
 	<string name="device_name_cannot_be_empty">Device name cannot be empty</string>
 	<string name="device_name">Device name</string>
 	<string name="shared_string_hide">Hide</string>
-	<string name="share_location_as_description_second_line">You can create and view the Device ID in the telegram client using the %1$s chat bot. %2$s</string>
-	<string name="share_location_as_description">If you want to connect multiple devices to one telegram account, you need to use different Device to share your location.</string>
-	<string name="add_new_device_description">Last updated location:</string>
-	<string name="last_updated_location">Last updated location:</string>
-	<string name="successfully_sent_and_updated">Successfully sent and updated</string>
-	<string name="not_possible_to_send_to_telegram_chats">Not possible to send to Telegram chats:</string>
+	<string name="share_location_as_description_second_line">The Device ID can be created and viewed in the Telegram client using the %1$s chat bot. %2$s</string>
+	<string name="share_location_as_description">When connecting multiple devices to one Telegram account, use a different device to share your location.</string>
+	<string name="add_new_device_description">Last sent location:</string>
+	<string name="last_updated_location">Last sent location:</string>
+	<string name="successfully_sent_and_updated">Sent and updated.</string>
+	<string name="not_possible_to_send_to_telegram_chats">Could not send to Telegram chats:</string>
 	<string name="waiting_for_response_from_telegram">Waiting for response from Telegram</string>
-	<string name="sending_location_messages">Sending location messages</string>
-	<string name="initializing">Initializing</string>
-	<string name="searching_for_gps">Searching for GPS</string>
-	<string name="connecting_to_the_internet">Connecting to the internet</string>
-	<string name="background_work_description">Change battery optimization settings, for stable location sharing</string>
+	<string name="sending_location_messages">Sending location</string>
+	<string name="initializing">Starting</string>
+	<string name="searching_for_gps">Positioning…</string>
+	<string name="connecting_to_the_internet">Connecting to the Internet</string>
+	<string name="background_work_description">Change battery optimization settings to stabilize location sharing.</string>
 	<string name="background_work">Background work</string>
 	<string name="battery_optimization_description">Turn off battery optimization for OsmAnd Telegram so that it isn\'t suddenly turned off when in the background.</string>
 	<string name="sharing_in_background">Sharing in the background</string>
@@ -39,7 +39,7 @@
 	<string name="no_internet_connection">No internet connection</string>
 	<string name="shared_string_disable">Disable</string>
 	<string name="shared_string_save">Save</string>
-	<string name="add_device_descr">Find your device ID at https://live.osmand.net/device/ID</string>
+	<string name="add_device_descr">Copy your device ID from https://live.osmand.net/device/ID</string>
 	<string name="device_id">Device ID</string>
 	<string name="add_device">Add device</string>
 	<string name="share_location_as_descr">Allow sharing your device location, or location of custom devices added via API.</string>
@@ -64,36 +64,37 @@
 	<string name="shared_string_group">Group</string>
 	<string name="logout_no_internet_msg">Connect to the Internet to properly log out of Telegram.</string>
 	<string name="shared_string_close">Close</string>
-	<string name="disconnect_from_telegram_desc">To revoke location sharing access. Open Telegram, go to Settings - Privacy and Security - Sessions and terminate the OsmAnd Telegram session.</string>
+	<string name="disconnect_from_telegram_desc">To revoke location sharing access. Open Telegram, go to Settings → Privacy and Security → Sessions, and terminate the OsmAnd Telegram session.</string>
 	<string name="disconnect_from_telegram">How to turn off OsmAnd Location Sharing from Telegram</string>
 	<string name="logout_help_desc">How to turn off OsmAnd Location Sharing from Telegram</string>
 	<string name="connected_account">Connected account</string>
 	<string name="shared_string_account">Account</string>
 	<string name="in_time">in %1$s</string>
-	<string name="osmand_connect_desc">Choose the OsmAnd version OsmAnd Telegram uses to display positions on the map.</string>
+	<string name="osmand_connect_desc">Choose the OsmAnd version OsmAnd Telegram uses to display positions.</string>
 	<string name="osmand_connect">OsmAnd connect</string>
-	<string name="location_history_desc">Hide the contacts that have not updated their location in a given amount of time.</string>
+	<string name="location_history_desc">Hide contacts that have not moved in a given time.</string>
 	<string name="location_history">Location history</string>
-	<string name="stale_location_desc">The last time a contact sent a location.</string>
-	<string name="stale_location">Stale location</string>
+	<string name="stale_location_desc">The last time a contact moved.</string>
+	<string name="stale_location">Not moving</string>
 	<string name="send_my_location_desc">Set the minimum interval for location sharing.</string>
 	<string name="send_my_location">Send my location</string>
-	<string name="gps_and_location">GPS &amp; location</string>
+	<string name="gps_and_location">Position</string>
 	<string name="sharing_time">Sharing time</string>
-	<string name="expire_at">Expires at</string>
-	<string name="stop_sharing_all">Sharing is enabled (disable)</string>
+        <!-- The following is a time of day. Expires (at) ___ -->
+	<string name="expire_at">Expires</string>
+	<string name="stop_sharing_all">Sharing is on (turn off)</string>
 	<string name="turn_off_location_sharing">Turn off location sharing</string>
 	<string name="open_osmand">Open OsmAnd</string>
 	<string name="shared_string_live">Live</string>
 	<string name="shared_string_bot">Bot</string>
 	<string name="get_telegram_title">Registration in Telegram</string>
-	<string name="get_telegram_account_first">You need a Telegram account to use OsmAnd Location Sharing.</string>
-	<string name="get_telegram_description_continue">Please install Telegram from Google Play and register an account to do so.</string>
-	<string name="get_telegram_after_creating_account">After creating the account, you can use this app.</string>
+	<string name="get_telegram_account_first">You need a Telegram account to use location sharing.</string>
+	<string name="get_telegram_description_continue">Please install Telegram and set up an account.</string>
+	<string name="get_telegram_after_creating_account">Then you can use this app.</string>
 	<string name="shared_string_all">All</string>
 	<string name="shared_string_off">Off</string>
 	<string name="already_registered_in_telegram">You need a registered Telegram account and phone number</string>
-	<string name="do_not_have_telegram">I don\'t have Telegram account</string>
+	<string name="do_not_have_telegram">I don\'t have one</string>
 	<string name="enter_phone_number">Enter phone number</string>
 	<string name="enter_authentication_code">Enter authentication code</string>
 	<string name="set_visible_time_for_all">Set visible time for all</string>
@@ -106,32 +107,32 @@
 	<string name="visible_time_for_all">Visible time for all</string>
 	<string name="set_time_description">Set the time that your selected contacts and groups will see your location in real time.</string>
 	<string name="set_time">Set time</string>
-	<string name="location_sharing_description">Select the contacts and groups with whom you want to share your location.</string>
-	<string name="my_location_search_hint">Search: group or contact</string>
-	<string name="start_location_sharing">Start location sharing</string>
+	<string name="location_sharing_description">Select the contacts and groups you want to share your location with.</string>
+	<string name="my_location_search_hint">Search: Group or contact</string>
+	<string name="start_location_sharing">Share location</string>
 	<string name="show_on_map">Show on map</string>
 	<string name="app_name">OsmAnd Telegram</string>
 	<string name="phone_number_title">Phone number</string>
-	<string name="phone_number_descr">Phone number in the international format</string>
+	<string name="phone_number_descr">Phone number in international format</string>
 	<string name="shared_string_password">Password</string>
 	<string name="enter_code">Enter code</string>
 	<string name="authentication_code">Authentication code</string>
 	<string name="authentication_code_descr">Telegram has sent you a code for OsmAnd to log in on your account.</string>
 	<string name="enter_password">Enter password</string>
-	<string name="password_descr">Please enter your Telegram account password</string>
+	<string name="password_descr">Telegram password</string>
 	<string name="shared_string_login">Log in</string>
 	<string name="shared_string_logout">Log out</string>
-	<string name="not_logged_in">You are not logged in</string>
-	<string name="initialization">Initialization</string>
+	<string name="not_logged_in">Not logged in</string>
+	<string name="initialization">Starting</string>
 	<string name="logging_out">Logging out</string>
 	<string name="closing">Closing</string>
 	<string name="shared_string_continue">Continue</string>
 	<string name="shared_string_cancel">Cancel</string>
-	<string name="gps_network_not_enabled">Turn on location service?</string>
+	<string name="gps_network_not_enabled">Turn on \"Location\"?</string>
 	<string name="shared_string_settings">Settings</string>
 	<string name="no_location_permission">App lacks permission for location data access.</string>
-	<string name="gps_not_available">Please turn on GPS in the settings</string>
-	<string name="location_service_no_gps_available">Select on of the location providers to share your location.</string>
+	<string name="gps_not_available">Please turn on \"Location\" in the system settings</string>
+	<string name="location_service_no_gps_available">Select one of the location providers to share your location.</string>
 	<string name="osmand_service">Background mode</string>
 	<string name="osmand_service_descr">OsmAnd Telegram runs in the background with the screen off.</string>
 	<string name="shared_string_distance">Distance</string>
@@ -181,7 +182,7 @@
 	<string name="plus">+</string>
 	<string name="welcome_descr"><![CDATA[<b>OsmAnd Location Sharing</b> lets you share your location and see that of others in the OsmAnd.<br/><br/>The app uses Telegram API and you need a Telegram account.]]></string>
 	<string name="my_location">My location</string>
-	<string name="live_now">Sending now</string>
+	<string name="live_now">Sending…</string>
 
 
 </resources>
