--- a/OsmAnd-telegram/res/values-ru/strings.xml
+++ b/OsmAnd-telegram/res/values-ru/strings.xml
@@ -1,19 +1,80 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<resources><string name="not_sent_yet">Не отправлено</string>
+<resources>
+	<string name="shared_string_hour_short">ч</string>
+	<string name="shared_string_minute_short">мин</string>
+	<string name="shared_string_second_short">сек</string>
+	<string name="shared_string_name">Имя</string>
+	<string name="by_distance">По расстоянию</string>
+	<string name="by_name">По имени</string>
+	<string name="by_group">По группе</string>
+	<string name="shared_string_sort">Сортировать</string>
+	<string name="shared_string_sort_by">Сортировать по</string>
+	<string name="turn_off_all">Выключить всё</string>
+	<string name="shared_string_exit">Выход</string>
+	<string name="time_ago">назад</string>
+	<string name="last_response">Последний ответ</string>
+	<string name="shared_string_group">Группа</string>
+	<string name="live_now_description">Контакты и группы, отправляющие вам местоположение.</string>
+	<string name="share_location">Поделиться местоположением</string>
+	<string name="shared_string_install">Установить</string>
+	<string name="install_osmand">Установить OsmAnd</string>
+	<string name="shared_string_continue">Продолжить</string>
+	<string name="shared_string_cancel">Отмена</string>
+	<string name="location_sharing_description">Выберите контакты и группы, с которыми вы хотите поделиться своим местоположением.</string>
+	<string name="not_sent_yet">Не отправлено</string>
+	<string name="show_on_map">Показать на карте</string>
+	<string name="open_osmand">Открыть OsmAnd</string>
+	<string name="shared_string_all">Все</string>
+	<string name="shared_string_off">Off</string>
+	<string name="shared_string_settings">Настройки</string>
+	<string name="sharing_time">Время трансляции</string>
+	<string name="turn_off_location_sharing">Отключить отправку локации</string>
+	<string name="expire_at">Истекает в</string>
+	<string name="in_time">через %1$s</string>
+	<string name="shared_string_share">Поделиться</string>
+	<string name="shared_string_back">Назад</string>
+	<string name="set_time_description">Установите время, в течение которого выбранные вами контакты и группы будут видеть ваше местоположение в режиме реального времени.</string>
+	<string name="visible_time_for_all">Видимое время для всех</string>
+	<string name="last_updated_location">Последнее обновление локации:</string>
+	<string name="successfully_sent_and_updated">Успешно отправлено и обновлено</string>
+	<string name="not_possible_to_send_to_telegram_chats">Невозможно отправить Telegram чаты:</string>
+	<string name="waiting_for_response_from_telegram">Ожидание ответа от Telegram</string>
+	<string name="searching_for_gps">Поиск GPS</string>
+	<string name="connecting_to_the_internet">Подключение к Интернету</string>
+	<string name="background_work_description">Измените настройки оптимизации батареи, чтобы обеспечить стабильную отправку местоположения</string>
+	<string name="location_history">История местоположений</string>
+	<string name="stale_location_desc">В последний раз контакт отправил местоположение.</string>
+	<string name="stale_location">Устаревание местоположения</string>
+	<string name="send_my_location_desc">Установите минимальный интервал между отправками местоположения.</string>
+	<string name="send_my_location">Отправка моей позиции</string>
+	<string name="gps_and_location">GPS &amp; местоположение</string>
+	<string name="location_history_desc">Скройте контакты, которые не обновили свое местоположение за определенный промежуток времени.</string>
+	<string name="share_location_as">Поделиться местоположением как</string>
+	<string name="share_location_as_description">Если вы хотите подключить несколько устройств к одной учетной записи Telegram, вам необходимо использовать другое устройство для трансляции местоположения.</string>
+	<string name="osmand_connect_desc">Выберите версию OsmAnd которую OsmAnd Telegram использует для отображения позиций на карте.</string>
+	<string name="osmand_connect">OsmAnd подключение</string>
+	<string name="connected_account">Связанная учетная запись</string>
+	<string name="shared_string_account">Учетная запись</string>
+	<string name="start_location_sharing">Начать отправку локации</string>
+	<string name="install_osmand_dialog_message">Вам необходимо сначала установить бесплатную или платную версию OsmAnd</string>
+	<string name="disconnect_from_telegram">Как отключить передачу данных OsmAnd от Telegram</string>
+	<string name="logout_help_desc">Как отключить передачу данных OsmAnd от Telegram</string>
+	<string name="disconnect_from_telegram_desc">Отмена доступа к отправке локаций. Откройте Telegram, перейдите в Настройки - Конфиденциальность и безопасность - Сессии и завершите сеанс OsmAnd Telegram.</string>
+	<string name="logout_from_osmand_telegram">Выйти из OsmAnd Telegram?</string>
+	<string name="shared_string_login">Войти</string>
+	<string name="shared_string_logout">Выйти</string>
+	<string name="logout_from_osmand_telegram_descr">Вы уверены, что хотите выйти из OsmAnd Telegram, так вы не сможете делиться местоположением или не видеть местоположения других?</string>
+
 	<string name="not_found_yet">Не найдено</string>
 	<string name="re_send_location">Отправить местоположение</string>
-	<string name="last_sent_location">Последнее отправление</string>
 	<string name="last_available_location">Последнее местоположение</string>
 	<string name="sharing_status">Статус отправки</string>
-	<string name="sharing_enabled">Отправка: включена</string>
+	<string name="sharing_enabled">Трансляция: включена</string>
 	<string name="shared_string_status">Статус</string>
 	<string name="no_gps_connection">Отсутствует GPS</string>
-	<string name="sharing_success">Отправлено успешно</string>
-	<string name="not_possible_to_send_to_chats">Нет возможности отправить в:</string>
 	<string name="no_internet_connection">Отсутствует интернет</string>
 	<string name="shared_string_disable">Отключить</string>
 	<string name="shared_string_save">Сохранить</string>
-	<string name="device_id">ID устройства</string>
 	<string name="add_device">Добавить устройство</string>
 	<string name="go_to_settings">Перейти в настройки</string>
 	<string name="shared_string_later">Позже</string>
