--- a/OsmAnd-telegram/res/values-ru/strings.xml
+++ b/OsmAnd-telegram/res/values-ru/strings.xml
@@ -1,5 +1,54 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+	<string name="sending_location_messages">Отправка местоположения</string>
+	<string name="initializing">Запуск</string>
+	<string name="sharing_in_background">Трансляция в фоновом режиме</string>
+	<string name="no_location_permission">Приложение не имеет разрешения на доступ к данным о местоположении.</string>
+	<string name="gps_not_available">Пожалуйста, включите «Местоположение» в системных настройках</string>
+	<string name="location_service_no_gps_available">Выберите один из провайдеров определения местоположения, чтобы поделиться своим местоположением.</string>
+	<string name="background_work">Работа в фоне</string>
+	<string name="battery_optimization_description">Отключите оптимизацию батареи для OsmAnd Telegram, чтобы оно не было внезапно отключено в фоновом режиме.</string>
+	<string name="osmand_service">Фоновый режим</string>
+	<string name="osmand_service_descr">OsmAnd Telegram работает в фоновом режиме с выключенным экраном.</string>
+	<string name="choose_osmand_desc">Выберите версию OsmAnd, в которой контакты будут отображаться на карте.</string>
+	<string name="choose_osmand">Выберите версию OsmAnd для использования</string>
+	<string name="disable_all_sharing_desc">Отключить общий доступ ко всем выбранным чатам (%1$d).</string>
+	<string name="disable_all_sharing">Отключить все трансляции</string>
+	<string name="shared_string_live">Активных</string>
+	<string name="shared_string_bot">Бот</string>
+	<string name="shared_string_close">Закрыть</string>
+	<string name="initialization">Инициализация</string>
+	<string name="set_time">Выберите время</string>
+	<string name="enter_another_device_name">Выберите имя, которое вы еще не использовали</string>
+	<string name="device_added_successfully">%1$s добавлен.</string>
+	<string name="error_adding_new_device">Не удалось добавить новое устройство</string>
+	<string name="device_name_is_too_long">Имя устройства слишком длинное</string>
+	<string name="device_name_cannot_be_empty">Имя устройства не может быть пустым</string>
+	<string name="shared_string_password">Пароль</string>
+	<string name="enter_code">Введите код</string>
+	<string name="authentication_code">Код аутентификации</string>
+	<string name="authentication_code_descr">Telegram отправил вам код для того, чтобы OsmAnd вошел в вашу учетную запись.</string>
+	<string name="enter_password">Введите пароль</string>
+	<string name="password_descr">Пароль Telegram</string>
+	<string name="welcome_descr"><![CDATA[<b>OsmAnd Location Sharing</b> позволяет вам делиться своим местоположением и видеть других в OsmAnd.<br/><br/>Приложение использует Telegram API, и вам нужна учетная запись Telegram.]]></string>
+	<string name="phone_number_title">Номер телефона</string>
+	<string name="phone_number_descr">Номер телефона в международном формате</string>
+	<string name="shared_string_authorization">Авторизация</string>
+	<string name="shared_string_authorization_descr">Введите номер телефона Telegram в международном формате</string>
+	<string name="shared_string_welcome">Добро пожаловать</string>
+	<string name="get_telegram_title">Регистрация в Telegram</string>
+	<string name="get_telegram_account_first">Для использования отправки местоположений вам нужна учетная запись Telegram.</string>
+	<string name="get_telegram_description_continue">Пожалуйста, установите Telegram и настройте учетную запись.</string>
+	<string name="get_telegram_after_creating_account">Затем вы можете использовать это приложение.</string>
+	<string name="already_registered_in_telegram">Вам нужна зарегистрированная учетная запись Telegram и номер телефона</string>
+	<string name="do_not_have_telegram">У меня нет учетной записи Telegram</string>
+	<string name="enter_phone_number">Введите номер телефона</string>
+	<string name="enter_authentication_code">Введите код аутентификации</string>
+	<string name="shared_string_add">Добавить</string>
+	<string name="enter_device_name_description">Назовите новое устройство макс. 200 символов.</string>
+	<string name="shared_string_distance">Расстояние</string>
+	<string name="my_location">Моё местоположение</string>
+	<string name="live_now">Активно сейчас</string>
 	<string name="shared_string_hour_short">ч</string>
 	<string name="shared_string_minute_short">мин</string>
 	<string name="shared_string_second_short">сек</string>
@@ -25,7 +74,7 @@
 	<string name="show_on_map">Показать на карте</string>
 	<string name="open_osmand">Открыть OsmAnd</string>
 	<string name="shared_string_all">Все</string>
-	<string name="shared_string_off">Off</string>
+	<string name="shared_string_off">Отключить</string>
 	<string name="shared_string_settings">Настройки</string>
 	<string name="sharing_time">Время трансляции</string>
 	<string name="turn_off_location_sharing">Отключить отправку локации</string>
