--- a/OsmAnd-telegram/res/values-ru/strings.xml
+++ b/OsmAnd-telegram/res/values-ru/strings.xml
@@ -1,5 +1,18 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+
+	<string name="device_name">Имя устройства</string>
+	<string name="shared_string_hide">Спрятать</string>
+	<string name="share_location_as_description_second_line">Вы можете создать и просмотреть идентификатор устройства в клиенте telegram, используя %1$s чат бота. %2$s</string>
+	<string name="logout_no_internet_msg">Подключитесь к Интернету, чтобы правильно выйти из Telegram.</string>
+	<string name="set_visible_time_for_all">Установить видимое время для всех</string>
+	<string name="hours_and_minutes_format">%1$d ч %2$d м</string>
+	<string name="minutes_format">%1$d м</string>
+	<string name="hours_format">%1$d ч</string>
+	<string name="not_logged_in">Вы не вошли в систему</string>
+	<string name="sharing_location">Трансляция местоположения</string>
+	<string name="show_users_on_map">Показывать пользователей на карте</string>
+	<string name="active_chats">Активные чаты</string>
 	<string name="sending_location_messages">Отправка местоположения</string>
 	<string name="initializing">Запуск</string>
 	<string name="sharing_in_background">Трансляция в фоновом режиме</string>
