--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="edit_map_marker">Edit map marker</string>
     <string name="third_party_application">Third-party application</string>
     <string name="search_street">Search street</string>
-    <string name="start_search_from_city">Start search from city</string>
+    <string name="start_search_from_city">Select the city first</string>
     <string name="shared_string_restore">Restore</string>
     <string name="keep_passed_markers_descr">Markers added as a group of Favorites or GPX waypoints marked "Passed" will remain on the map. If the group is not active, the markers will disappear from the map.</string>
     <string name="keep_passed_markers">Keep passed markers on the map</string>
