Added new subscriptions - merge

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,6 +10,19 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
+    <string name="osm_live_payment_monthly_title">Pay monthly</string>
+    <string name="osm_live_payment_3_months_title">Pay once in 3 months</string>
+    <string name="osm_live_payment_annual_title">Pay once a year</string>
+    <string name="osm_live_payment_month_cost_descr">%1$s / month</string>
+    <string name="osm_live_payment_month_cost_descr_ex">%1$.2f %2$s / month</string>
+    <string name="osm_live_payment_discount_descr">Save %1$s!</string>
+	<string name="osm_live_payment_current_subscription">Your current subscription</string>
+    <string name="osm_live_payment_renews_monthly">Renews monthly</string>
+    <string name="osm_live_payment_renews_quarterly">Renews quarterly</string>
+    <string name="osm_live_payment_renews_annually">Renews annually</string>
+    <string name="default_price_currency_format">%1$.2f %2$s</string>
+    <string name="osm_live_payment_header">Select the payment period convenient for you:</string>
+    <string name="osm_live_payment_contribute_descr">Part of income goes to OpenStreetMap contributors.</string>
     <string name="markers_remove_dialog_msg">Delete Map marker \'%s\'?</string>
     <string name="edit_map_marker">Edit map marker</string>
     <string name="third_party_application">Third-party application</string>
