--- a/OsmAnd-telegram/res/values-pl/strings.xml
+++ b/OsmAnd-telegram/res/values-pl/strings.xml
@@ -15,13 +15,19 @@
 	<string name="sharing_enabled">Udostępnianie: Włączone</string>
 	<string name="shared_string_status">Status</string>
 	<string name="no_gps_connection">Brak połączenia GPS</string>
+	<string name="sharing_success">Wysłano i zaktualizowano</string>
+	<string name="not_possible_to_send_to_chats">Nie można wysłać na czat:</string>
 	<string name="no_internet_connection">Brak połączenia z internetem</string>
 	<string name="shared_string_disable">Wyłącz</string>
+	<string name="shared_string_save">Zapisz</string>
+	<string name="add_device_descr">Znajdź swój identyfikator urządzenia na https://live.osmand.net/device/ID</string>
+	<string name="device_id">Identyfikator urządzenia</string>
 	<string name="add_device">Dodaj urządzenie</string>
+	<string name="share_location_as_descr">Pozwól na udostępnianie lokalizacji urządzenia lub lokalizacji niestandardowych urządzeń dodawanych przez API.</string>
 	<string name="share_location_as">Udostępnij lokalizację jako</string>
 	<string name="live_now_description">Kontakty i grupy, które udostępniają Ci swoją lokalizację.</string>
 	<string name="logout_from_osmand_telegram_descr">Czy na pewno chcesz się wylogować z OsmAnd Telegram\? Po tym czasie nie będziesz mógł wysłać swojej pozycji i zobaczyć lokalizacji swoich kontaktów na mapie w OsmAnd.</string>
-	<string name="logout_from_osmand_telegram">Wyloguj się z OsmAnd Telegram\?</string>
+	<string name="logout_from_osmand_telegram">Wylogować się z OsmAnd Telegram\?</string>
 	<string name="shared_string_name">Nazwa</string>
 	<string name="by_distance">Według odległości</string>
 	<string name="by_name">Według nazwy</string>
@@ -30,25 +36,25 @@
 	<string name="shared_string_sort_by">Sortuj według</string>
 	<string name="choose_osmand_desc">Wybierz wersję OsmAnd, w której kontakty będą wyświetlane na mapie.</string>
 	<string name="choose_osmand">Wybierz używaną wersję OsmAnd</string>
-	<string name="disable_all_sharing_desc">To wyłączy udostępnianie lokalizacji dla wszystkich wybranych czatów (%1$d).</string>
+	<string name="disable_all_sharing_desc">Wyłącza udostępnianie lokalizacji dla wszystkich wybranych czatów (%1$d).</string>
 	<string name="disable_all_sharing">Wyłącz udostępnianie</string>
 	<string name="turn_off_all">Wyłącz wszystko</string>
 	<string name="shared_string_exit">Zakończ</string>
 	<string name="time_ago">temu</string>
 	<string name="last_response">Ostatnia odpowiedź</string>
 	<string name="shared_string_group">Grupa</string>
-	<string name="logout_no_internet_msg">Internet jest wymagany, by właściwie wylogować się z konta Telegramu.</string>
+	<string name="logout_no_internet_msg">Połącz się z internetem, by właściwie wylogować się z konta Telegramu.</string>
 	<string name="shared_string_close">Zamknij</string>
-	<string name="disconnect_from_telegram">Jak rozłączyć Udostępnianie Lokalizacji OsmAnd z konta Telegramu</string>
-	<string name="logout_help_desc">Jak rozłączyć Udostępnianie Lokalizacji OsmAnd z Telegramu</string>
+	<string name="disconnect_from_telegram">Jak wyłączyć Udostępnianie Lokalizacji OsmAnd z Telegramu</string>
+	<string name="logout_help_desc">Jak wyłączyć Udostępnianie Lokalizacji OsmAnd z Telegramu</string>
 	<string name="connected_account">Połączone konta</string>
 	<string name="shared_string_account">Konto</string>
 	<string name="in_time">w %1$s</string>
-	<string name="osmand_connect_desc">Wybierz wersję OsmAnd do której Telegram OsmAnd będzie się odnosił przy wyświetlaniu pozycji na mapie.</string>
+	<string name="osmand_connect_desc">Wybierz wersję OsmAnd, którą Telegram OsmAnd będzie używał przy wyświetlaniu pozycji na mapie.</string>
 	<string name="osmand_connect">Połącz OsmAnd</string>
 	<string name="location_history_desc">Ukryj kontakty, które nie zaktualizowały swojej lokalizacji po określonym czasie.</string>
 	<string name="location_history">Historia lokalizacji</string>
-	<string name="stale_location_desc">Ostatni raz, kiedy kontakt wysłał aktualizację do swojej lokalizacji.</string>
+	<string name="stale_location_desc">Ostatni raz, kiedy kontakt wysłał lokalizację.</string>
 	<string name="send_my_location_desc">Wybierz minimalny odstęp dla udostępniania lokalizacji.</string>
 	<string name="send_my_location">Wyślij moją lokalizację</string>
 	<string name="gps_and_location">GPS i lokalizacja</string>
@@ -60,12 +66,12 @@
 	<string name="shared_string_bot">Bot</string>
 	<string name="get_telegram_title">Rejestracja w Telegramie</string>
 	<string name="get_telegram_account_first">Potrzebujesz konto w Telegramie, by używać Udostępniania Lokalizacji OsmAnd.</string>
-	<string name="get_telegram_description_continue">Jeśli chcesz kontynuować, prosimy zainstalować Telegram z Google Play i zarejestrować konto.</string>
+	<string name="get_telegram_description_continue">Prosimy zainstalować Telegram z Google Play i zarejestrować konto.</string>
 	<string name="get_telegram_after_creating_account">Po utworzeniu konta, możesz używać aplikacji.</string>
 	<string name="shared_string_all">Wszystkie</string>
 	<string name="shared_string_off">Wyłączone</string>
-	<string name="already_registered_in_telegram">Potrzebujesz już zarejestrowanego konta i numeru telefonu w Telegramie</string>
-	<string name="do_not_have_telegram">Nie masz konta w Telegramie</string>
+	<string name="already_registered_in_telegram">Potrzebujesz zarejestrowanego konta w Telegramie i numeru telefonu</string>
+	<string name="do_not_have_telegram">Nie mam konta w Telegramie</string>
 	<string name="enter_phone_number">Wpisz numer telefonu</string>
 	<string name="enter_authentication_code">Wpisz kod zabezpieczający</string>
 	<string name="set_visible_time_for_all">Ustaw czas widoczny dla wszystkich</string>
@@ -88,14 +94,15 @@
 	<string name="shared_string_password">Hasło</string>
 	<string name="enter_code">Wpisz kod</string>
 	<string name="authentication_code">Kod zabezpieczający</string>
-	<string name="authentication_code_descr">Telegram wysłał ci kod. Będzie on używany przez OsmAnd jako login do konta.</string>
+	<string name="authentication_code_descr">Telegram wysłał ci kod do OsmAnd jako login do konta.</string>
 	<string name="enter_password">Wpisz kod</string>
-	<string name="password_descr">Proszę wpisać kod konta w Telegramie by zakończyć autoryzację</string>
+	<string name="password_descr">Proszę wpisać kod konta w Telegramie</string>
 	<string name="shared_string_login">Zaloguj się</string>
 	<string name="shared_string_logout">Wyloguj się</string>
 	<string name="not_logged_in">Nie jesteś zalogowany/a</string>
 	<string name="shared_string_continue">Kontynuuj</string>
 	<string name="shared_string_cancel">Anuluj</string>
+	<string name="gps_network_not_enabled">Włączyć usługę lokalizacji\?</string>
 	<string name="shared_string_settings">Opcje</string>
 	<string name="no_location_permission">Aplikacja nie ma uprawnień dostępu do danych o położeniu.</string>
 	<string name="gps_not_available">Proszę włączyć GPS w opcjach</string>
@@ -146,4 +153,24 @@
 	<string name="live_now">Na żywo teraz</string>
 
 
-</resources>
+<string name="enter_another_device_name">Wpisz inną nazwę, masz już urządzenie o tej samej nazwie</string>
+	<string name="device_added_successfully">%1$s dodany z powodzeniem.</string>
+	<string name="shared_string_add">Dodaj</string>
+	<string name="error_adding_new_device">Błąd podczas dodawania nowego urządzenia</string>
+	<string name="enter_device_name_description">Wpisz nazwę nowego urządzenia. Maksymalna długość to 200 znaków.</string>
+	<string name="device_name_is_too_long">Nazwa urządzenia jest za długa</string>
+	<string name="device_name_cannot_be_empty">Nazwa sprzętu nie można być pusta</string>
+	<string name="device_name">Nazwa urządzenia</string>
+	<string name="shared_string_hide">Ukryj</string>
+	<string name="share_location_as_description_second_line">Możesz utworzyć i zobaczyć ID sprzętu w telegramie klienta, używając %1$s bota czatu. %2$s</string>
+	<string name="share_location_as_description">Jeśli chcesz połączyć wiele urządzeń z jednym kontem telegramu, potrzebujesz użyć innego sprzętu do udostępniania lokalizacji.</string>
+	<string name="add_new_device_description">Ostatnia aktualizacja lokalizacji:</string>
+	<string name="last_updated_location">Ostatnia aktualizacja lokalizacji:</string>
+	<string name="successfully_sent_and_updated">Wysłano i zaktualizowano z powodzeniem</string>
+	<string name="not_possible_to_send_to_telegram_chats">Nie można wysłać na czaty Telegramu:</string>
+	<string name="waiting_for_response_from_telegram">Oczekiwanie na odpowiedź od Telegramu</string>
+	<string name="sending_location_messages">Wysyłanie wiadomości lokalizacji</string>
+	<string name="initializing">Inicjalizacja</string>
+	<string name="searching_for_gps">Szukanie sygnału GPS</string>
+	<string name="connecting_to_the_internet">Łączenie z internetem</string>
+	</resources>
